--- a/Fast_Scene_Understanding.ipynb
+++ b/Fast_Scene_Understanding.ipynb
@@ -34,47 +34,10 @@
     "from PIL import Image\n",
     "\n",
     "import future\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup tensorboard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "writer = SummaryWriter('runs/experiment_1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.6.8 (default, Oct  7 2019, 12:59:55) \n",
-      "[GCC 8.3.0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.version)"
    ]
   },
   {
@@ -358,13 +321,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "lDZLtYRbjhlw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-25f508c53b26>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# figure out enet_weighing issue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#criterion_label = nn.CrossEntropyLoss()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mcriterion_label\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclass_weights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mcriterion_inst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcriterion_label\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#criterion_inst = instance_loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from data.utils import enet_weighing\n",
     "lr = 5e-4\n",
@@ -379,8 +355,13 @@
     "                             lr=lr,\n",
     "                             weight_decay=2e-4)\n",
     "\n",
+    "## Name experiment to differentiate different runs for tensorboard\n",
+    "## eg. for hyperparameter tuning\n",
+    "\n",
+    "experiment = 'experiment_lr-' + str(lr)\n",
+    "\n",
     "print_every = 5\n",
-    "eval_every = 5"
+    "eval_every = 2"
    ]
   },
   {
@@ -423,7 +404,10 @@
     "bc_train = 367 // batch_size # mini_batch train\n",
     "bc_eval = 101 // batch_size  # mini_batch validation\n",
     "\n",
-    "epochs = 100"
+    "epochs = 100\n",
+    "\n",
+    "train_writer = SummaryWriter('runs/' + experiment + '/train')\n",
+    "val_writer = SummaryWriter('runs/' + experiment + '/val')"
    ]
   },
   {
@@ -543,7 +527,7 @@
     "\n",
     "        train_loss += loss.item()\n",
     "        \n",
-    "    writer.add_scalar('Loss/train', train_loss, e)\n",
+    "    train_writer.add_scalar('Loss', train_loss, e)\n",
     "    \n",
     "    if e % eval_every == 0:\n",
     "        with torch.no_grad():\n",
@@ -573,7 +557,7 @@
     "                eval_loss += criterion_dpth(dpth_out, dpth.float()).item()\n",
     "                \n",
     "            \n",
-    "            writer.add_scalar('Loss/test', eval_loss, e // eval_every)\n",
+    "            val_writer.add_scalar('Loss', eval_loss, e)\n",
     "        \n",
     "    if e % print_every == 0:\n",
     "        checkpoint = {\n",
@@ -582,9 +566,15 @@
     "        }\n",
     "        torch.save(checkpoint, '/content/ckpt-enet-{}-{}.pth'.format(e, train_loss))\n",
     "        print ('Model saved!')\n",
+    "    train_writer.flush()\n",
+    "    val_writer.flush()\n",
     "\n",
     "print ('Epoch {}/{}...'.format(e, epochs),\n",
-    "       'Total Mean Loss: {:6f}'.format(sum(train_losses) / epochs))"
+    "       'Total Mean Loss: {:6f}'.format(sum(train_losses) / epochs))\n",
+    "\n",
+    "\n",
+    "train_writer.close()\n",
+    "val_writer.close()"
    ]
   }
  ],
@@ -604,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
